# SDLEngine

./: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/src/Game/: Game.cpp  Game.h  Scene.cpp  Scene.h
Engine/src/GameObject/: GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
Engine/src/GameObject/Components/: Component.cpp  Component.h  RigidBody.cpp  RigidBody.h  Script.cpp  Script.h  Sprite.cpp  Sprite.h
Engine/src/GameObject/Components/Colliding/: CircleCollider.cpp  CircleCollider.h  Collider.h  RectangleCollider.cpp  RectangleCollider.h
Engine/src/GameObject/Components/Rendering/: Renderable.cpp  Renderable.h  RenderableCircle.cpp  RenderableCircle.h  RenderablePolygon.cpp  RenderablePolygon.h  RenderableRectangle.cpp  RenderableRectangle.h  RenderableText.cpp  RenderableText.h
Engine/src/Modules/: CollisionHandler.cpp  CollisionHandler.h  Input.cpp  Input.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Time.cpp  Time.h
Engine/src/Serialization/: Cloning.h  ComponentFactory.cpp  ComponentFactory.h  Parsing.h
Engine/src/Utils/: Color.cpp  Color.h  Event.h  Math.cpp  Math.h  Templates.h  Vector.h  Vector2D.cpp  Vector2D.h
Scene/: game.json  test.json  test2.json
src/: FPSScript.cpp  FPSScript.h  TestScript.cpp  TestScript.h  main.cpp
